src/test/deca/context/valid/provided/ContextSansObjet/Condition/condElseIfBooleenne.deca
//Description:
//  condition booléenne dans else if
//
//Résultat:
// ok
{
if(false)
{
    print("bizarre!!");
}
else if (true)
{
    print("ok");
}
}
