src/test/deca/context/invalid/provided/ContextSansObjet/Condition/condElseIfNonBooleenne.deca
//Description:
//  condition non booléenne dans else if
//
//Résultat:
// Erreur Contextuelle
//  ligne 13 : la condition doit être de type boolean
{
int a=2;
if(true)
{
    print("ok");
}
else if (a)
{
    print("bizarre!!");
}
}
